--- a/public/package.json
+++ b/public/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.1",
-    "lodash": "^4.17.21"
+    "express": "^4.17.1",
+    "http-proxy": "^1.18.1",
+    "lodash": "^4.17.21",
+    "socket.io": "^4.2.0"
   }
 }
